--- a/Zodiac/app/src/main/res/values/strings.xml
+++ b/Zodiac/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Zodiac</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tv_frag_create_symbol_symbol_name">SymbolName</string>
 </resources>
